fixing the gap between the title and the description in form component

--- a/src/Component/Form/Plan.module.scss
+++ b/src/Component/Form/Plan.module.scss
@@ -59,6 +59,9 @@
   .time {
     padding-inline: 7em;
   }
+  .info {
+    gap: 0.5em;
+  }
 }
 
 //for the toggle switch button
