--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,7 @@
   --font-size-medium: 16px;
   --font-size-semi-medium: 18px;
   --font-size-large: 24px;
+  --font-size-larger: 30px;
 
   // Font weights
   --font-weight-light: 400;
